@@ -135,7 +135,7 @@
 					<!-- <excludes>**/*GwtTest.java</excludes> -->
 					<includes>**/*GwtTest.java</includes>
 
-					<extraJvmArgs>-Xmx3G -XX:MaxPermSize=1024M</extraJvmArgs>
+					<extraJvmArgs>-Xmx3G</extraJvmArgs>
 					<logLevel>INFO</logLevel>
 					<style>${gwt.style}</style>
 
@@ -167,7 +167,6 @@
 						<jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag>
 						<jvmFlag>-XX:+CMSClassUnloadingEnabled</jvmFlag>
 						<jvmFlag>-XX:+CMSPermGenSweepingEnabled</jvmFlag>
-						<jvmFlag>-XX:MaxPermSize=1024M</jvmFlag>
 						<jvmFlag>-Xmx3G</jvmFlag>
 					</jvmFlags>
 					<version>0v4</version>
@@ -222,11 +221,6 @@
 			<version>${gwt.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.googlecode.gwtquery</groupId>
-			<artifactId>gwtquery</artifactId>
-			<version>1.5-beta1</version>
-		</dependency>
 		<dependency>
 			<groupId>org.commonjava.googlecode.markdown4j</groupId>
 			<artifactId>markdown4j-gwt</artifactId>
